GNOME Bugzilla – Bug 679259
[new roster] no longer remember expanded status of groups
Last modified: 2012-08-30 12:16:22 UTC
Empathy used to remember the expanded status of the contact view groups, in …/Empathy/contact-groups.xml, e.g.: <contacts> <account name="Default"> <group expanded="no" name="Bots"/> <group expanded="yes" name="GNOME"/> … this doesn't happen anymore (and it looks like that config file has not been touched since the new roster view got merged). The code that used to work is still available in libempathy/empathy-contact-groups.c
Created attachment 222930 [details] [review] roster-view: remember state expanded status of groups Pretty simple actually, that's a simple port of the logic from empathy-individual-view.
Attachment 222930 [details] pushed as 52d5351 - roster-view: remember state expanded status of groups