roster-view: remember state expanded status of groups

Pretty simple actually, that's a simple port of the logic from
empathy-individual-view.

https://bugzilla.gnome.org/show_bug.cgi?id=679259